Removed @Ignore.